--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "compilerOptions": {
-        "sourceMap": true,
+        // "sourceMap": true,
         "noImplicitAny": true,
         "module": "commonjs",
         "target": "es6",
+        "outDir": "dist"
     },
     "include": [
         "**/*.ts"
