--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         // "sourceMap": true,
-        "noImplicitAny": true,
+        "strict": true,
         "module": "commonjs",
         "target": "es6",
         "outDir": "dist"
